--- a/design.html
+++ b/design.html
@@ -19,90 +19,77 @@
 			<a href="#i3"><li>버섯 둥지</li></a>
 			<a href="#i4"><li>나뭇잎</li></a>
 			<a href="#i5"><li>형광펜</li></a>
+			<a href="#i6"><li>돌탑</li></a>
+			<a href="#i7"><li>불상</li></a>
+			<a href="#i8"><li>나무</li></a>
+			<a href="#i9"><li>연등</li></a>
+			<a href="#i10"><li>천장</li></a>
 		</ul>
 	</nav>
-		<nav>
-		<ul>
-			<a href="#i1"><li>돌탑</li></a>
-			<a href="#i2"><li>불상</li></a>
-			<a href="#i3"><li>나무</li></a>
-			<a href="#i4"><li>연등</li></a>
-			<a href="#i5"><li>천장</li></a>
-		</ul>
-	</nav>
-	<article id="i1">
-		<section>
+	<article>
+		<section id=i1>
 			<h2>하늘이 갈라지다.</h2>
 			<figure>
 				<img src="img/design/sky and forest.jpg" alt="하늘과 숲이다.">
 			</figure>
 			<p>하늘이 있고 양옆에 숲이 있다. 원근법 때문에 중심으로 갈수록 나무가 가까워지는 것처럼 보인다. 하늘이 역삼각형이다. 나무의 잔가지로 인해 숲과 완벽하게 단절되지 않는다. 나무의 기둥이 화면에 안 나와서 풀숲처럼 보이기도 한다. 뾰족한 나무와 부드러운 구름의 질감 차이가 느껴진다. 구름이 많아 하늘이 드문드문 보인다. 무채색에 푸른색으로 포인트를 주어 눈길을 끈다.</p>
-		</section>
-		<section>
-			<h2>돌탑</h2>
-			<figure>
-				<img src="img/design/stone tower.jpg" alt="바위 위 돌탑이 있다.">
-			</figure>
-			<p>바닥에 납작한 돌이 몇 개 깔려있다. 그 위로 삼각형의 거대한 돌이 우뚝 서 있다. 상단 모서리에 얇고 작은 삼각형 바위가 위태롭게 올라가 있다. 위는 좁고 아래로 내려갈수록 넓어지는 조형물은 안정감을 준다. 아래는 좁고 위는 넓은 조형물은 보는 사람을 불안하게 한다. 주변에 돌탑이 많았는데 이 돌탑이 가장 안정감이 있었다. 멋진 탑이라서 소원을 이루어 줄 것 같다.</p>
-		</section>
-	</article>
-	<article id="i2">
-		<section>
+		<section id=i2>
 			<h2>계단식 화단</h2>
 			<figure>
 				<img src="img/design/terraced.jpg" alt="건물 주변 화단이 계단식으로 있다.">
 			</figure>
 			<p>화단이 담벼락이랑 혼합된 게 특이하다. 계단식 농업은 봤지만 이런 건 처음 본다. 담벼락에 꽃을 심다니 공간을 절약하면서 심미성을 취하는 좋은 아이디어라고 생각한다. 사진을 보면 담벼락이 위로 갈수록 서서히 넓어지는데 땅 면적에 비해 더 큰 개방감을 주고 싶어서 이런 구조로 설계했다는 생각이 든다. 화단의 꽃 색깔이 진해 눈에 띄는 것은 좋지만 좀 더 다양한 종류로 심었으면 더 예뻤을 것이다.</p>
 		</section>
-		<section>
-			<h2>불상</h2>
-			<figure>
-				<img src="img/design/buddha.jpg" alt="불상 제단이다.">
-			</figure>
-			<p>가운데 큰 불상이 하나, 좌우로 약간 작은 불상이 2개, 수직으로 더 작은 불상이 5개, 그리고 무수히 많은 불상들이 벽면을 가득 채웠다. 중요한 동상일수록 더 크고 가운데에 가까우며 수가 적다. 구조적으로 완벽한 대칭이다. 대칭성은 시각적으로 안정적인 느낌을 제공한다. 중요한 건축물에서는 대칭성을 통해 중요성과 귀족성을 상징적으로 나타낼 수 있다. </p>
-		</section>
-	</article>
-	<article id="i3">
-		<section>
+		<section id=i3>
 			<h2>버섯 둥지</h2>
 			<figure>
 				<img src="img/design/mushroom.jpg" alt="가지 안에 버섯이 둥글게 밀집한다.">
 			</figure>
 			<p>버섯이 새 둥지처럼 자랐다. 둥근 버섯이 모여있는 모습을 보고 알을 연상했다. 버섯을 자세히 보면 결이 있다. 옆에 날카로운 형태의 푸른 잡초들이 둥지를 에워싸고 있다. 버섯만 있었으면 눈에 덜 띄었을 것이다. 그러나 잡초의 다각적인 배치와 푸른색이 사진에 생명력과 활력을 더 해주고 있다. 둥지가 둥글어서 시선이 가운데로 간다. 나중에 디자인할 때 이것과 비슷한 디자인을 생각해 봐야겠다.</p>
 		</section>
-		<section>
-			<h2>나무</h2>
-			<figure>
-				<img src="img/design/tree.jpg" alt="나무가 두 그루다.">
-			</figure>
-			<p>두 개의 나무가 앞 쪽과 뒤 쪽에 있다. 서로 겹쳐져 마치 한 그루 같다. 전체적으로 큰 기둥이 3개 있고, 기둥에서 멀어질 수 록 가지 수가 많고 굵기가 얇으며 모양이 섬세해진다. 규칙적이지만 불규칙적이다. 나무의 이런 규칙적인 형태가 좋다. 땅에서 하늘로 올라가는 번개같은 형태다. 가지의 맨 끝에는 작은 잎들이 달려 있다. 잎이 적기 때문에 나무 몸체가 그대로 보여서 앙상한 인상이다.</p>
-		</section>
-	</article>
-	<article id="i4">
-		<section>
+		<section id=i4>
 			<h2>나뭇잎</h2>
 			<figure>
 				<img src="img/design/leaves.jpg" alt="숲이다.">
 			</figure>
 			<p>강의실 창문을 보니 이런 풍경이 있었다. 어느 한 곳으로 시선이 몰리지 않고 스프레이로 분사한 듯이 나뭇잎이 분포한다. 정오의 강한 빛을 받아 잎들이 노랗다. 평소에 많이 본 풍경이었지만 빛을 받으니 우둘투둘한 재질감이 느껴져서 새로운 느낌이다. 브로콜리나 파슬리 같다. 이렇게 같은 곳인데도 시간에 따라 보이는 게 달라서 같은 풍경이라도 여러 시간대에서 봐야겠다는 생각이 든다.</p>
 		</section>
-		<section>
-			<h2>연등</h2>
-			<figure>
-				<img src="img/design/lantern.jpg" alt="연등이 아치형으로 매달린다.">
-			</figure>
-			<p>연등이 멀어질수록 하나의 지점으로 모인다. 5가지의 원색으로 매우 화려하다. 색깔과 배치가 규칙성 있다. 직광이 연등을 비추어 더 강하게 빛난다. 이것도 대칭이다. 좌우로 올수록 화면에서 가까워져 사진만 봐도 이 연등이 아치형으로 매달려 있음을 누구나 알 수 있다. 실제로 보면 다른 세상에 온 듯한 감상이다. 바닥에 연등 그대로 그림자가 졌다. 그것도 신기하다.</p>
-		</section>
-	</article>
-	<article id="i5">
-		<section>
+			<section id=i5>
 			<h2>형광펜</h2>
 			<figure>
 				<img src="img/design/yellow.jpg" alt="타이포가 있는 형광펜이다.">
 			</figure>
 			<p>형광펜에 타이포그래피가 있다. 평소에는 신경 쓰지 않았다. 그런데 수업을 듣고 나니까 보인다. 글자 크기와 배치로 위계가 잘 나뉘어 있다. 주제 격인 중요한 STAEDTLER가 대문자로 가장 굵고 상단에 있다. Textsurfer classic은 그다음 크기로 바로 아래에 배치되어 있다. 두 문자의 엇갈리는 배치로 단조롭지 않은 구성이다. 가장 하위 정보인 MAID IN GERMANY는 수직 배치로 제품 측면에 작은 공간을 차지하고 있다.</p>
 		</section>
-		<section>
+		<section id=i6>
+			<h2>돌탑</h2>
+			<figure>
+				<img src="img/design/stone tower.jpg" alt="바위 위 돌탑이 있다.">
+			</figure>
+			<p>바닥에 납작한 돌이 몇 개 깔려있다. 그 위로 삼각형의 거대한 돌이 우뚝 서 있다. 상단 모서리에 얇고 작은 삼각형 바위가 위태롭게 올라가 있다. 위는 좁고 아래로 내려갈수록 넓어지는 조형물은 안정감을 준다. 아래는 좁고 위는 넓은 조형물은 보는 사람을 불안하게 한다. 주변에 돌탑이 많았는데 이 돌탑이 가장 안정감이 있었다. 멋진 탑이라서 소원을 이루어 줄 것 같다.</p>
+		</section>
+		<section id=i7>
+			<h2>불상</h2>
+			<figure>
+				<img src="img/design/buddha.jpg" alt="불상 제단이다.">
+			</figure>
+			<p>가운데 큰 불상이 하나, 좌우로 약간 작은 불상이 2개, 수직으로 더 작은 불상이 5개, 그리고 무수히 많은 불상들이 벽면을 가득 채웠다. 중요한 동상일수록 더 크고 가운데에 가까우며 수가 적다. 구조적으로 완벽한 대칭이다. 대칭성은 시각적으로 안정적인 느낌을 제공한다. 중요한 건축물에서는 대칭성을 통해 중요성과 귀족성을 상징적으로 나타낼 수 있다. </p>
+		</section>
+		<section id=i8>
+			<h2>나무</h2>
+			<figure>
+				<img src="img/design/tree.jpg" alt="나무가 두 그루다.">
+			</figure>
+			<p>두 개의 나무가 앞 쪽과 뒤 쪽에 있다. 서로 겹쳐져 마치 한 그루 같다. 전체적으로 큰 기둥이 3개 있고, 기둥에서 멀어질 수 록 가지 수가 많고 굵기가 얇으며 모양이 섬세해진다. 규칙적이지만 불규칙적이다. 나무의 이런 규칙적인 형태가 좋다. 땅에서 하늘로 올라가는 번개같은 형태다. 가지의 맨 끝에는 작은 잎들이 달려 있다. 잎이 적기 때문에 나무 몸체가 그대로 보여서 앙상한 인상이다.</p>
+		</section>
+		<section id=i9>
+			<h2>연등</h2>
+			<figure>
+				<img src="img/design/lantern.jpg" alt="연등이 아치형으로 매달린다.">
+			</figure>
+			<p>연등이 멀어질수록 하나의 지점으로 모인다. 5가지의 원색으로 매우 화려하다. 색깔과 배치가 규칙성 있다. 직광이 연등을 비추어 더 강하게 빛난다. 이것도 대칭이다. 좌우로 올수록 화면에서 가까워져 사진만 봐도 이 연등이 아치형으로 매달려 있음을 누구나 알 수 있다. 실제로 보면 다른 세상에 온 듯한 감상이다. 바닥에 연등 그대로 그림자가 졌다. 그것도 신기하다.</p>
+		</section>
+		<section id=i10>
 			<h2>천장</h2>
 			<figure>
 				<img src="img/design/ceiling.jpg" alt="불교 문양이 있는 천장이다. 용 머리가 2개 있다.">
