--- a/design.html
+++ b/design.html
@@ -33,6 +33,7 @@
 				<img src="img/design/sky and forest.jpg" alt="하늘과 숲이다.">
 			</figure>
 			<p>하늘이 있고 양옆에 숲이 있다. 원근법 때문에 중심으로 갈수록 나무가 가까워지는 것처럼 보인다. 하늘이 역삼각형이다. 나무의 잔가지로 인해 숲과 완벽하게 단절되지 않는다. 나무의 기둥이 화면에 안 나와서 풀숲처럼 보이기도 한다. 뾰족한 나무와 부드러운 구름의 질감 차이가 느껴진다. 구름이 많아 하늘이 드문드문 보인다. 무채색에 푸른색으로 포인트를 주어 눈길을 끈다.</p>
+		</section>
 		<section id=i2>
 			<h2>계단식 화단</h2>
 			<figure>
