--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="keywords" content="웹페이지,연결">
 	<meta name="description" content="웹페이지를 연결합니다.">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 	 
 </head>
 <body>
